--- a/gtk/examples/js/jsconfig.json
+++ b/gtk/examples/js/jsconfig.json
@@ -4,6 +4,7 @@
       "gi://Adw?version=1": ["./node_modules/@girs/adw-1"],
       "gi://Gtk?version=4.0": ["./node_modules/@girs/gtk-4.0"],
       "gi://Gio": ["./node_modules/@girs/gio-2.0"],
+      "gi://GLib": ["./node_modules/@girs/glib-2.0"],
       "gi://GObject": ["./node_modules/@girs/gobject-2.0"],
       "gi://Gdk?version=4.0": ["./node_modules/@girs/gdk-4.0"],
       "gi://GXml?version=0.20": ["./node_modules/@girs/gxml-0.20"]
